src/styles/App.css
/* Design */
/* https://www.behance.net/gallery/92212755/Livero-Minimalistic-design-for-online-furniture-store?tracking_source=search_projects%7Cminimalistic+online+shop */

@import url("https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300;400;700&display=swap");

:root {
    --base-color: #474f4f;
    --secondary-color: #8c9e90;
    --light-bg-color: #f5f5f5;
    --white-color: #fff;
    --warning-color: #cf6666;
}

html {
    font-family: "Kumbh Sans", sans-serif;
}

body {
    background: var(--white-color);
    color: var(--base-color);
    padding: 2em 10em;
}

p {
    line-height: 1.5;
}
a {
    color: inherit;
    text-decoration: inherit;
    cursor: pointer;
}
a:hover {
    text-decoration: underline;
}

input,
button {
    background: transparent;
    text-transform: uppercase;
    border: 1px solid var(--base-color);
    padding: 0.5em 1em;
    font-size: 0.9em;
    margin-inline: 1em;
    text-align: center;
}

input {
    border: none;
    border-bottom: 1px solid var(--base-color);
}

button:hover {
    background-color: var(--light-bg-color);
}
button:active {
    background-color: var(--secondary-color);
}

input:focus,
button:focus {
    outline: none;
}

.icon {
    position: relative;
    display: inline-block;
    width: 1em;
    height: 1em;
    margin-inline: 0.3em;
}

.icon.add::after {
    content: "+";
    position: absolute;
    font-size: 1.7em;
    line-height: 0.6em;
}

.currency {
    font-weight: 400;
    margin-inline-start: 0.2em;
}

.currency.dollar:after {
    content: "$";
}

.App {
    display: flex;
    flex-direction: column;
}

header nav {
    font-size: 1.5em;
    margin-block-end: 3em;
}

nav {
    display: flex;
    justify-content: space-between;
    align-items: baseline;
}

nav a.active {
    text-decoration: underline;
}

nav .logo {
    font-weight: 700;
    font-size: 3em;
    margin-inline-end: 2em;
}

nav .logo a:hover {
    text-decoration: none;
}

nav ul {
    flex: 1;
    display: flex;
    justify-content: space-between;
    align-items: baseline;
    list-style: none;
}

nav ul li:last-child {
    padding-inline-start: 3em;
}

main {
    flex: 1;
    min-height: 10em;
}

main .categories {
    display: flex;
    justify-content: space-between;
    font-size: 1.2em;
    text-transform: uppercase;
    list-style: none;
    margin-block-end: 5em;
}
main .categories a.active {
    text-decoration: underline;
}

footer {
    margin-block-start: 5em;
    font-size: 0.9em;
}

footer nav ul {
    justify-content: center;
}

